--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm install
 
     - name: Build
-      run: npm run build --
+      run: npm run build -- --base-href /jawc/
 
     - name: Deploy
       if: success()
