--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/assets/js/dictionary.js"
+              "src/assets/js/dictionary.js",
+              "src/assets/js/modal.js"
             ]
           },
           "configurations": {
